--- a/package.json
+++ b/package.json
@@ -14,5 +14,14 @@
   "license": "ISC",
   "dependencies": {
     "firebase": "^9.1.1"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://Kasia_Zawis@bitbucket.org/Kasia_Zawis/learn_languages.git"
+  },
+  "bugs": {
+    "url": "https://bitbucket.org/Kasia_Zawis/learn_languages/issues"
+  },
+  "homepage": "https://bitbucket.org/Kasia_Zawis/learn_languages#readme"
 }
