--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   cloud_firestore: ^2.5.3
   firebase_core: ^1.7.0
-  flutter_form_builder: ^6.1.0+1
+  flutter_form_builder: ^6.2.0
 
 dev_dependencies:
   flutter_test:
