--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cloud_firestore: ^2.5.3
   firebase_core: ^1.7.0
   flutter_form_builder: ^6.2.0
+  multi_select_flutter: ^4.0.0
 
 dev_dependencies:
   flutter_test:
