--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   firebase_core: ^1.7.0
   flutter_form_builder: ^6.2.0
   multi_select_flutter: ^4.0.0
+  flutter_riverpod: ^0.14.0+3
 
 dev_dependencies:
   flutter_test:
