--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_form_builder: ^6.2.0
   multi_select_flutter: ^4.0.0
   flutter_riverpod: ^0.14.0+3
+  flutter_tts: ^3.2.2
 
 dev_dependencies:
   flutter_test:
