--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   multi_select_flutter: ^4.0.0
   flutter_riverpod: ^0.14.0+3
   flutter_tts: ^3.2.2
+  flutter_countdown_timer: ^4.1.0
 
 dev_dependencies:
   flutter_test:
