--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_riverpod: ^0.14.0+3
   flutter_tts: ^3.2.2
   flutter_countdown_timer: ^4.1.0
+  firebase_auth: ^3.1.5
 
 dev_dependencies:
   flutter_test:
