--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,14 +34,15 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  cloud_firestore: ^2.5.3
+  cloud_firestore: ^3.1.2
   firebase_core: ^1.7.0
-  flutter_form_builder: ^6.2.0
+  flutter_form_builder: ^7.0.0
   multi_select_flutter: ^4.0.0
-  flutter_riverpod: ^0.14.0+3
+  flutter_riverpod: ^1.0.1
   flutter_tts: ^3.2.2
   flutter_countdown_timer: ^4.1.0
   firebase_auth: ^3.1.5
+  form_builder_validators: ^7.2.0
 
 dev_dependencies:
   flutter_test:
