Starts to rewrite the website into a much more user friendly way
Fixes login page by using flutterfire_ui packager

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,9 @@ dependencies:
   flutter_countdown_timer: ^4.1.0
   firebase_auth: ^3.1.5
   form_builder_validators: ^7.2.0
+  flutterfire_ui: ^0.4.2+2
+  responsive_framework: ^0.2.0
+  url_launcher: ^6.1.4
 
 dev_dependencies:
   flutter_test:
