--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,10 +42,12 @@ dependencies:
   flutter_tts: ^3.2.2
   flutter_countdown_timer: ^4.1.0
   firebase_auth: ^3.1.5
-  form_builder_validators: ^7.2.0
+  form_builder_validators: ^8.1.1
   flutterfire_ui: ^0.4.2+2
   responsive_framework: ^0.2.0
   url_launcher: ^6.1.4
+  url_strategy: ^0.2.0
+  vrouter: ^1.2.1
 
 dev_dependencies:
   flutter_test:
@@ -56,7 +58,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^1.0.0
+  flutter_lints: ^2.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
