starts adding sign up screen

--- a/firebase.json
+++ b/firebase.json
@@ -13,6 +13,12 @@
     "indexes": "firestore.indexes.json"
   },
   "hosting": {
+    "rewrites": [
+      {
+        "source": "**",
+        "destination": "/index.html"
+      }
+    ],
     "public": "build/web",
     "ignore": [
       "firebase.json",
